syntax = "proto2";

message MediaPlaybackStatus
{
    enum State
    {
        MediaServiceStatePause = 0;
        MediaServiceStateStopped = 1;
        MediaServiceStatePlaying = 3;
    }

    optional State state = 1;
    optional string source = 2;
    optional uint32 seconds = 3;
    optional bool shuffle = 4;
    optional bool repeat = 5;
    optional bool repeat_one = 6;
}

message MediaMetaData
{
    optional string song = 1;
    optional string artist = 2;
    optional string album = 3;
    optional bytes albumart = 4;
    optional string playlist = 5;
    optional uint32 duration = 6;
    optional uint32 rating = 7;
}